# aerith-ingestion

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: aws-ecs-deploy.yml
docs/: FEATURES.md  PARKING_LOT.md  PRD.md  REVIEW.md  STORIES.md  TODO.md  vector_store.md
docs/c4/: 001_system_context.mmd  002_container.mmd
docs/diagrams/: aerith_ingestion.md
docs/inputs/01_sales_funnel/: 01_sales_funnel.md
docs/inputs/02_code_model_1/: ai_reasoning_algorithms.py  main.py
docs/inputs/04_selection_of_top_5_methods/: 04_selection_of_top_5_methods.md  base.py  self_reflective_agent.py  society_of_mind.py  tool_enhanced_agent.py
docs/inputs/05_holistic_list_of_agent_methods/: __init__.py  chain_of_thought.py  society_of_mind.py  somine_prompt.py  tool_use_agent.py
docs/inputs/06_holistic_list_based_on_somine/: 06_holistic_list_based_on_somine.md  somine_agent.py  tree_of_thoughts.py
docs/old/: SRS.md  USER_JOURNEY.md
docs/old/c4/: 001_system_context.mmd  003_components.mmd  004_class.mmd
docs/old/specs/: TodoistIngestion.cfg
docs/old/ui/: package-lock.json  package.json
docs/specs/: TodoistIngestion.tla
docs/ui/: package-lock.json  package.json
hooks/: pre-commit  prepare-commit-msg
infra/docker/: .dockerignore  Dockerfile
infra/terraform/: main.tf  setup.sh  variables.tf
jobs/aerith_ingestion/persistence/: calendar_event.py  project.py
jobs/aerith_ingestion/services/: webhook.py
jobs/aerith_ingestion/utils/: file_utils.py
mvp/.cursor/rules/: get-my-bearings.mdc  google-gen-ai-sdk.mdc  sanity-check-me.mdc
mvp/app/: .env-e  .env.example  .env.test  .gitignore  README.md  dev.sh  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  vitest.config.ts
mvp/app/docs/: PRD.md  STORIES.md  diagrams.md
mvp/app/drizzle/: 0000_acoustic_green_goblin.sql  0000_colorful_praxagora.sql  0001_glorious_gamma_corps.sql  0001_gtd_base_entities.sql
mvp/app/infra/: LOCAL.md  README.md  TODO.md
mvp/app/src/: env.js
mvp/docs/: MONITORING.md
mvp/exp/: Makefile  ROADMAP.md  backoff_config.py  data_storage.py  environment_config.py  error_handler.py  gemini_service.py  gtd_processor.py  interfaces.py  main.py  models.py  monitoring.py  prompt_templates.py  rate_limiter.py  request_manager.py  requirements.txt  todoist_service.py
mvp/exp/output/: projects.json  tasks.json
mvp/tests/: test_integration.py
src/aerith_ingestion/: cli.py  main.py
src/aerith_ingestion/api/: server.py
src/aerith_ingestion/commands/: calendar.py  crawl.py  gcal_webhook.py  sync.py  todoist_webhook.py  webhook.py
src/aerith_ingestion/config/: __init__.py  api.py  db.py  enrichment.py  logging.py  sites.json
src/aerith_ingestion/core/: base.py  config.py  factory.py  logging_aspect.py
src/aerith_ingestion/domain/: __init__.py  models.py  project.py  task.py
ui/: package-lock.json  package.json
(+125 files in other folders)
